--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -3,4 +3,6 @@ main: com.blank038.nblockscript.NBlockScript
 api: ["1.0.0"]
 author: Blank038
 description: A BlockScript plugin for Nukkit.
-version: 0.0.2
+softdepend:
+  - EconomyAPI
+version: 0.0.3
